--- a/interfaces/SPARQLDriverOptions.html
+++ b/interfaces/SPARQLDriverOptions.html
@@ -27,7 +27,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">SPARQLDriverOptions</span></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/81d860d/src/service/SPARQLDataDriver.ts#L200">src/service/SPARQLDataDriver.ts:200</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/1c30ec4/src/service/SPARQLDataDriver.ts#L210">src/service/SPARQLDataDriver.ts:210</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -40,7 +40,7 @@
 <a href="SPARQLDriverOptions.html#datetime" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>datetime?</span></a>
 <a href="SPARQLDriverOptions.html#deserialize" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>deserialize?</span></a>
 <a href="SPARQLDriverOptions.html#destination" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>destination?</span></a>
-<a href="SPARQLDriverOptions.html#engine" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>engine</span></a>
+<a href="SPARQLDriverOptions.html#engine" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>engine?</span></a>
 <a href="SPARQLDriverOptions.html#explain" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>explain?</span></a>
 <a href="SPARQLDriverOptions.html#extensionFunctionCreator" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>extension<wbr/>Function<wbr/>Creator?</span></a>
 <a href="SPARQLDriverOptions.html#extensionFunctions" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>extension<wbr/>Functions?</span></a>
@@ -80,7 +80,7 @@
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>base<wbr/>Uri</span><a href="#baseUri" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">base<wbr/>Uri</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-symbol">`</span><span class="tsd-signature-type">http://</span><span class="tsd-signature-symbol">${</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">}</span><span class="tsd-signature-symbol">`</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-symbol">`</span><span class="tsd-signature-type">https://</span><span class="tsd-signature-symbol">${</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">}</span><span class="tsd-signature-symbol">`</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/81d860d/src/service/SPARQLDataDriver.ts#L201">src/service/SPARQLDataDriver.ts:201</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/1c30ec4/src/service/SPARQLDataDriver.ts#L211">src/service/SPARQLDataDriver.ts:211</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited tsd-is-external"><a id="datetime" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>datetime</span><a href="#datetime" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">datetime</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type ">Date</span></div><aside class="tsd-sources">
@@ -113,13 +113,13 @@
 <ul>
 <li>Defined in node_modules/@comunica/types/lib/IQueryContext.d.ts:25</li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="engine" class="tsd-anchor"></a>
-<h3 class="tsd-anchor-link"><span>engine</span><a href="#engine" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
-<div class="tsd-signature"><span class="tsd-kind-property">engine</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type ">ActorInitQueryBase</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type ">IQueryContextCommon</span><span class="tsd-signature-symbol">&gt;</span></div>
+<h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>engine</span><a href="#engine" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
+<div class="tsd-signature"><span class="tsd-kind-property">engine</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type ">ActorInitQueryBase</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type ">IQueryContextCommon</span><span class="tsd-signature-symbol">&gt;</span></div>
 <div class="tsd-comment tsd-typography"><p>Comunica query engine</p>
 </div>
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/81d860d/src/service/SPARQLDataDriver.ts#L206">src/service/SPARQLDataDriver.ts:206</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/1c30ec4/src/service/SPARQLDataDriver.ts#L216">src/service/SPARQLDataDriver.ts:216</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited tsd-is-external"><a id="explain" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>explain</span><a href="#explain" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">explain</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type ">QueryExplainMode</span></div><aside class="tsd-sources">
@@ -210,7 +210,7 @@
 <div class="tsd-signature"><span class="tsd-kind-property">http<wbr/>Auth</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-symbol">`</span><span class="tsd-signature-symbol">${</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">}</span><span class="tsd-signature-type">:</span><span class="tsd-signature-symbol">${</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">}</span><span class="tsd-signature-symbol">`</span></div><aside class="tsd-sources">
 <p>Overrides QueryStringContext.httpAuth</p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/81d860d/src/service/SPARQLDataDriver.ts#L202">src/service/SPARQLDataDriver.ts:202</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/1c30ec4/src/service/SPARQLDataDriver.ts#L212">src/service/SPARQLDataDriver.ts:212</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited tsd-is-external"><a id="httpBodyTimeout" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>http<wbr/>Body<wbr/>Timeout</span><a href="#httpBodyTimeout" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">http<wbr/>Body<wbr/>Timeout</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">boolean</span></div><aside class="tsd-sources">
