--- a/variables/DefaultEngine.html
+++ b/variables/DefaultEngine.html
@@ -15,9 +15,9 @@
 <li><a href="../modules.html">@openhps/rdf</a></li>
 <li><a href="DefaultEngine.html">DefaultEngine</a></li></ul>
 <h1>Variable DefaultEngine<code class="tsd-tag ts-flagConst">Const</code> </h1></div>
-<div class="tsd-signature"><span class="tsd-kind-variable">Default<wbr/>Engine</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol"> = ...</span></div><aside class="tsd-sources">
+<div class="tsd-signature"><span class="tsd-kind-variable">Default<wbr/>Engine</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type ">ActorInitQueryBase</span><span class="tsd-signature-symbol"> = ...</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/81d860d/src/index.ts#L3">src/index.ts:3</a></li></ul></aside></div>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/1c30ec4/src/index.ts#L5">src/index.ts:5</a></li></ul></aside></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
