--- a/interfaces/SPARQLDriverOptions.html
+++ b/interfaces/SPARQLDriverOptions.html
@@ -27,7 +27,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">SPARQLDriverOptions</span></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/9fe25cf/src/service/SPARQLDataDriver.ts#L210">src/service/SPARQLDataDriver.ts:210</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/4705f85/src/service/SPARQLDataDriver.ts#L210">src/service/SPARQLDataDriver.ts:210</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -64,6 +64,7 @@
 <a href="SPARQLDriverOptions.html#serialize" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>serialize?</span></a>
 <a href="SPARQLDriverOptions.html#source" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>source?</span></a>
 <a href="SPARQLDriverOptions.html#sources" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>sources</span></a>
+<a href="SPARQLDriverOptions.html#uid" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>uid?</span></a>
 </div></section></div></details></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Properties</h2>
@@ -80,7 +81,7 @@
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>base<wbr/>Uri</span><a href="#baseUri" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">base<wbr/>Uri</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-symbol">`</span><span class="tsd-signature-type">http://</span><span class="tsd-signature-symbol">${</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">}</span><span class="tsd-signature-symbol">`</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-symbol">`</span><span class="tsd-signature-type">https://</span><span class="tsd-signature-symbol">${</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">}</span><span class="tsd-signature-symbol">`</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/9fe25cf/src/service/SPARQLDataDriver.ts#L211">src/service/SPARQLDataDriver.ts:211</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/4705f85/src/service/SPARQLDataDriver.ts#L211">src/service/SPARQLDataDriver.ts:211</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited tsd-is-external"><a id="datetime" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>datetime</span><a href="#datetime" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">datetime</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type ">Date</span></div><aside class="tsd-sources">
@@ -119,7 +120,7 @@
 </div>
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/9fe25cf/src/service/SPARQLDataDriver.ts#L216">src/service/SPARQLDataDriver.ts:216</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/4705f85/src/service/SPARQLDataDriver.ts#L216">src/service/SPARQLDataDriver.ts:216</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited tsd-is-external"><a id="explain" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>explain</span><a href="#explain" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">explain</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type ">QueryExplainMode</span></div><aside class="tsd-sources">
@@ -220,7 +221,7 @@
 <div class="tsd-signature"><span class="tsd-kind-property">http<wbr/>Auth</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-symbol">`</span><span class="tsd-signature-symbol">${</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">}</span><span class="tsd-signature-type">:</span><span class="tsd-signature-symbol">${</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">}</span><span class="tsd-signature-symbol">`</span></div><aside class="tsd-sources">
 <p>Overrides QueryStringContext.httpAuth</p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/9fe25cf/src/service/SPARQLDataDriver.ts#L212">src/service/SPARQLDataDriver.ts:212</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/4705f85/src/service/SPARQLDataDriver.ts#L212">src/service/SPARQLDataDriver.ts:212</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited tsd-is-external"><a id="httpBodyTimeout" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>http<wbr/>Body<wbr/>Timeout</span><a href="#httpBodyTimeout" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">http<wbr/>Body<wbr/>Timeout</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">boolean</span></div><aside class="tsd-sources">
@@ -345,7 +346,13 @@ Defaults to { language: &#39;sparql&#39;, version: &#39;1.1&#39; }</p>
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <p>Inherited from QueryStringContext.sources</p>
 <ul>
-<li>Defined in node_modules/@rdfjs/types/query/queryable.d.ts:48</li></ul></aside></section></section></div>
+<li>Defined in node_modules/@rdfjs/types/query/queryable.d.ts:48</li></ul></aside></section>
+<section class="tsd-panel tsd-member tsd-is-inherited tsd-is-external"><a id="uid" class="tsd-anchor"></a>
+<h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>uid</span><a href="#uid" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
+<div class="tsd-signature"><span class="tsd-kind-property">uid</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
+<p>Inherited from DataServiceOptions.uid</p>
+<ul>
+<li>Defined in node_modules/@openhps/core/dist/types/service/Service.d.ts:61</li></ul></aside></section></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -392,7 +399,8 @@ Defaults to { language: &#39;sparql&#39;, version: &#39;1.1&#39; }</p>
 <li><a href="#recoverBrokenLinks" class="tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>recover<wbr/>Broken<wbr/>Links</span></a></li>
 <li><a href="#serialize" class="tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>serialize</span></a></li>
 <li><a href="#source" class="tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>source</span></a></li>
-<li><a href="#sources" class="tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>sources</span></a></li></ul></div></details></div>
+<li><a href="#sources" class="tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>sources</span></a></li>
+<li><a href="#uid" class="tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>uid</span></a></li></ul></div></details></div>
 <div class="site-menu">
 <nav class="tsd-navigation"><a href="../modules.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1"></use></svg><span>@openhps/rdf</span></a>
 <ul class="tsd-small-nested-navigation" id="tsd-nav-container" data-base="..">
