--- a/classes/PointGeometry.html
+++ b/classes/PointGeometry.html
@@ -22,7 +22,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">PointGeometry</span></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/2f8f6d4/src/models/Geometry.ts#L98">src/models/Geometry.ts:98</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/0736b6f/src/models/Geometry.ts#L106">src/models/Geometry.ts:106</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -34,7 +34,7 @@
 </div></section>
 <section class="tsd-index-section">
 <h3 class="tsd-index-heading">Properties</h3>
-<div class="tsd-index-list"><a href="PointGeometry.html#altitude" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>altitude</span></a>
+<div class="tsd-index-list"><a href="PointGeometry.html#altitude" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>altitude?</span></a>
 <a href="PointGeometry.html#inDeployment" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>in<wbr/>Deployment</span></a>
 <a href="PointGeometry.html#latitude" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>latitude</span></a>
 <a href="PointGeometry.html#longitude" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>longitude</span></a>
@@ -52,31 +52,31 @@
 <section class="tsd-panel-group tsd-member-group">
 <h2>Properties</h2>
 <section class="tsd-panel tsd-member"><a id="altitude" class="tsd-anchor"></a>
-<h3 class="tsd-anchor-link"><span>altitude</span><a href="#altitude" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
-<div class="tsd-signature"><span class="tsd-kind-property">altitude</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div><aside class="tsd-sources">
+<h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>altitude</span><a href="#altitude" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
+<div class="tsd-signature"><span class="tsd-kind-property">altitude</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">number</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/2f8f6d4/src/models/Geometry.ts#L101">src/models/Geometry.ts:101</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/0736b6f/src/models/Geometry.ts#L109">src/models/Geometry.ts:109</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="inDeployment" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>in<wbr/>Deployment</span><a href="#inDeployment" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">in<wbr/>Deployment</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">`</span><span class="tsd-signature-type">http://</span><span class="tsd-signature-symbol">${</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">}</span><span class="tsd-signature-symbol">`</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-symbol">`</span><span class="tsd-signature-type">https://</span><span class="tsd-signature-symbol">${</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">}</span><span class="tsd-signature-symbol">`</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/2f8f6d4/src/models/Geometry.ts#L110">src/models/Geometry.ts:110</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/0736b6f/src/models/Geometry.ts#L118">src/models/Geometry.ts:118</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="latitude" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>latitude</span><a href="#latitude" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">latitude</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/2f8f6d4/src/models/Geometry.ts#L99">src/models/Geometry.ts:99</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/0736b6f/src/models/Geometry.ts#L107">src/models/Geometry.ts:107</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="longitude" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>longitude</span><a href="#longitude" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">longitude</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/2f8f6d4/src/models/Geometry.ts#L100">src/models/Geometry.ts:100</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/0736b6f/src/models/Geometry.ts#L108">src/models/Geometry.ts:108</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="spatialAccuracy" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>spatial<wbr/>Accuracy</span><a href="#spatialAccuracy" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">spatial<wbr/>Accuracy</span><span class="tsd-signature-symbol">?:</span> <a href="QuantityValue.html" class="tsd-signature-type tsd-kind-class">QuantityValue</a></div><aside class="tsd-sources">
 <p>Inherited from <a href="Geometry.html">Geometry</a>.<a href="Geometry.html#spatialAccuracy">spatialAccuracy</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/2f8f6d4/src/models/Geometry.ts#L44">src/models/Geometry.ts:44</a></li></ul></aside></section></section></div>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/0736b6f/src/models/Geometry.ts#L44">src/models/Geometry.ts:44</a></li></ul></aside></section></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
